Apply security and code quality rules (Rules.md)